fix: favorite Modal too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -647,7 +647,7 @@ ul.apps-category li.current {
   transform: translate(-50%, -50%);
   padding: 1px 11px;
   width: 35rem;
-  height: 33rem;
+  height: 34rem;
   overflow-y: scroll;
   border-radius: 20px;
   overflow-y: auto;
